@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: datrie
+Description: Double-array trie library
+Version: @VERSION@
+Requires: 
+Libs: -L${libdir} -ldatrie
+Cflags: -I${includedir}
